--- a/package.json
+++ b/package.json
@@ -9,13 +9,12 @@
   "type": "module",
   "private": true,
   "devDependencies": {
-    "@nx/cypress": "16.8.1",
-    "@nx/eslint-plugin": "16.8.1",
-    "@nx/js": "16.8.1",
-    "@nx/linter": "16.8.1",
+    "@nx/cypress": "17.0.1",
+    "@nx/eslint-plugin": "17.0.1",
+    "@nx/js": "17.0.1",
     "@nx/remix": "^16.8.2",
-    "@nx/vite": "16.8.1",
-    "@nx/workspace": "16.8.1",
+    "@nx/vite": "17.0.1",
+    "@nx/workspace": "17.0.1",
     "@remix-run/dev": "^1.16.1",
     "@remix-run/eslint-config": "^1.16.1",
     "@testing-library/jest-dom": "^5.16.5",
@@ -32,17 +31,17 @@
     "@vitest/ui": "~0.32.0",
     "cypress": "^13.0.0",
     "eslint": "~8.46.0",
-    "eslint-config-prettier": "8.1.0",
+    "eslint-config-prettier": "9.0.0",
     "eslint-plugin-cypress": "^2.13.4",
     "husky": "^8.0.3",
     "jsdom": "~22.1.0",
     "lint-staged": "^14.0.1",
-    "nx": "16.8.1",
-    "nx-cloud": "latest",
+    "nx": "17.0.1",
     "prettier": "^2.6.2",
     "typescript": "^4.8.4",
     "vite": "~4.3.9",
-    "vitest": "~0.32.0"
+    "vitest": "~0.32.0",
+    "@nx/eslint": "17.0.1"
   },
   "dependencies": {
     "@remix-run/node": "^1.16.1",
