convert to eslint flat config

--- a/nx.json
+++ b/nx.json
@@ -26,7 +26,8 @@
     "production": [
       "default",
       "!{projectRoot}/**/?(*.)+(spec|test).[jt]s?(x)?(.snap)",
-      "!{projectRoot}/tsconfig.spec.json"
+      "!{projectRoot}/tsconfig.spec.json",
+      "!{projectRoot}/eslint.config.js"
     ],
     "sharedGlobals": []
   },
