--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   "type": "module",
   "private": true,
   "devDependencies": {
+    "@eslint/eslintrc": "^2.1.1",
+    "@eslint/js": "~8.46.0",
     "@nx/cypress": "17.0.1",
+    "@nx/eslint": "17.0.1",
     "@nx/eslint-plugin": "17.0.1",
     "@nx/js": "17.0.1",
     "@nx/remix": "^16.8.2",
@@ -40,8 +43,7 @@
     "prettier": "^2.6.2",
     "typescript": "^4.8.4",
     "vite": "~4.3.9",
-    "vitest": "~0.32.0",
-    "@nx/eslint": "17.0.1"
+    "vitest": "~0.32.0"
   },
   "dependencies": {
     "@remix-run/node": "^1.16.1",
