--- a/package.json
+++ b/package.json
@@ -1,56 +1,65 @@
 {
-  "name": "@monorepo/source",
-  "version": "0.0.0",
-  "license": "MIT",
-  "scripts": {
-    "prepare": "husky install",
-    "postinstall": "pnpm prepare"
-  },
-  "type": "module",
-  "private": true,
-  "devDependencies": {
-    "@eslint/eslintrc": "^2.1.1",
-    "@eslint/js": "~8.46.0",
-    "@nx/cypress": "17.0.1",
-    "@nx/eslint": "17.0.1",
-    "@nx/eslint-plugin": "17.0.1",
-    "@nx/js": "17.0.1",
-    "@nx/remix": "^16.8.2",
-    "@nx/vite": "17.0.1",
-    "@nx/workspace": "17.0.1",
-    "@remix-run/dev": "^1.16.1",
-    "@remix-run/eslint-config": "^1.16.1",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^14.0.0",
-    "@testing-library/user-event": "^14.4.3",
-    "@types/node": "16.11.7",
-    "@types/react": "^18.0.25",
-    "@types/react-dom": "^18.0.8",
-    "@typescript-eslint/eslint-plugin": "^5.60.1",
-    "@typescript-eslint/parser": "^5.60.1",
-    "@vitejs/plugin-react": "~4.0.0",
-    "@vitest/coverage-c8": "~0.32.0",
-    "@vitest/coverage-v8": "^0.34.4",
-    "@vitest/ui": "~0.32.0",
-    "cypress": "^13.0.0",
-    "eslint": "~8.46.0",
-    "eslint-config-prettier": "9.0.0",
-    "eslint-plugin-cypress": "^2.13.4",
-    "husky": "^8.0.3",
-    "jsdom": "~22.1.0",
-    "lint-staged": "^14.0.1",
-    "nx": "17.0.1",
-    "prettier": "^2.6.2",
-    "typescript": "^4.8.4",
-    "vite": "~4.3.9",
-    "vitest": "~0.32.0"
-  },
-  "dependencies": {
-    "@remix-run/node": "^1.16.1",
-    "@remix-run/react": "^1.16.1",
-    "@remix-run/serve": "^1.16.1",
-    "isbot": "^3.6.8",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  }
+	"name": "@monorepo/source",
+	"version": "0.0.0",
+	"license": "MIT",
+	"scripts": {
+		"prepare": "husky install",
+		"postinstall": "pnpm prepare"
+	},
+	"private": true,
+	"devDependencies": {
+		"@babel/core": "^7.14.5",
+		"@babel/preset-react": "^7.14.5",
+		"@eslint/eslintrc": "^2.1.1",
+		"@eslint/js": "~8.46.0",
+		"@nx/cypress": "17.0.1",
+		"@nx/eslint": "17.0.1",
+		"@nx/eslint-plugin": "17.0.1",
+		"@nx/js": "17.0.1",
+		"@nx/react": "17.0.1",
+		"@nx/remix": "^17.0.0",
+		"@nx/vite": "17.0.1",
+		"@nx/workspace": "17.0.1",
+		"@remix-run/dev": "^2.1.0",
+		"@remix-run/eslint-config": "^2.1.0",
+		"@swc-node/register": "~1.6.7",
+		"@swc/core": "~1.3.85",
+		"@testing-library/jest-dom": "^5.16.5",
+		"@testing-library/react": "^14.0.0",
+		"@testing-library/user-event": "^14.4.3",
+		"@types/node": "18.14.2",
+		"@types/react": "18.2.24",
+		"@types/react-dom": "18.2.9",
+		"@typescript-eslint/eslint-plugin": "^5.60.1",
+		"@typescript-eslint/parser": "^5.60.1",
+		"@vitejs/plugin-react": "~4.0.0",
+		"@vitest/coverage-c8": "~0.32.0",
+		"@vitest/coverage-v8": "^0.34.4",
+		"@vitest/ui": "~0.32.0",
+		"cypress": "^13.0.0",
+		"eslint": "~8.46.0",
+		"eslint-config-prettier": "9.0.0",
+		"eslint-plugin-cypress": "^2.13.4",
+		"eslint-plugin-import": "2.27.5",
+		"eslint-plugin-jsx-a11y": "6.7.1",
+		"eslint-plugin-react": "7.32.2",
+		"eslint-plugin-react-hooks": "4.6.0",
+		"husky": "^8.0.3",
+		"jsdom": "~22.1.0",
+		"lint-staged": "^14.0.1",
+		"nx": "17.0.1",
+		"prettier": "^2.6.2",
+		"typescript": "^5.2.2",
+		"vite": "~4.3.9",
+		"vitest": "~0.32.0"
+	},
+	"dependencies": {
+		"@remix-run/node": "^2.1.0",
+		"@remix-run/react": "^2.1.0",
+		"@remix-run/serve": "^2.1.0",
+		"isbot": "^3.6.8",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"tslib": "^2.3.0"
+	}
 }
