--- a/package.json
+++ b/package.json
@@ -48,15 +48,36 @@
 		"jsdom": "~22.1.0",
 		"lint-staged": "^14.0.1",
 		"nx": "17.0.1",
+		"postcss": "^8.4.31",
+		"postcss-preset-mantine": "^1.9.0",
+		"postcss-simple-vars": "^7.0.1",
 		"prettier": "^2.6.2",
 		"typescript": "^5.2.2",
 		"vite": "~4.3.9",
 		"vitest": "~0.32.0"
 	},
 	"dependencies": {
+		"@mantine/carousel": "^7.1.7",
+		"@mantine/code-highlight": "^7.1.7",
+		"@mantine/core": "^7.1.7",
+		"@mantine/dates": "^7.1.7",
+		"@mantine/dropzone": "^7.1.7",
+		"@mantine/form": "^7.1.7",
+		"@mantine/hooks": "^7.1.7",
+		"@mantine/modals": "^7.1.7",
+		"@mantine/notifications": "^7.1.7",
+		"@mantine/nprogress": "^7.1.7",
+		"@mantine/spotlight": "^7.1.7",
+		"@mantine/tiptap": "^7.1.7",
 		"@remix-run/node": "^2.1.0",
 		"@remix-run/react": "^2.1.0",
 		"@remix-run/serve": "^2.1.0",
+		"@tabler/icons-react": "^2.40.0",
+		"@tiptap/extension-link": "^2.1.12",
+		"@tiptap/react": "^2.1.12",
+		"@tiptap/starter-kit": "^2.1.12",
+		"dayjs": "^1.11.10",
+		"embla-carousel-react": "8.0.0-rc14",
 		"isbot": "^3.6.8",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
