--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
 		"@tiptap/extension-link": "^2.1.12",
 		"@tiptap/react": "^2.1.12",
 		"@tiptap/starter-kit": "^2.1.12",
+		"axios": "^1.6.0",
 		"dayjs": "^1.11.10",
 		"embla-carousel-react": "8.0.0-rc14",
 		"isbot": "^3.6.8",
