--- a/packages/email-client/package.json
+++ b/packages/email-client/package.json
@@ -5,28 +5,29 @@
   "license": "",
   "scripts": {},
   "dependencies": {
+    "@mantine/core": "^7.1.7",
     "@remix-run/node": "^2.1.0",
     "@remix-run/react": "^2.1.0",
     "@remix-run/serve": "^2.1.0",
-    "isbot": "^3.6.8",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "@mantine/core": "^7.1.7",
+    "axios": "^1.6.0",
     "framer-motion": "^10.16.4",
+    "isbot": "^3.6.8",
     "jotai": "^2.5.0",
     "jotai-devtools": "^0.7.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
     "@remix-run/dev": "^2.1.0",
     "@remix-run/eslint-config": "^2.1.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
     "eslint": "^8.27.0",
-    "typescript": "^5.2.2",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^14.0.0",
-    "@testing-library/user-event": "^14.4.3"
+    "typescript": "^5.2.2"
   },
   "engines": {
     "node": ">=18"
