Implement bar chart

--- a/packages/data-visualization/package.json
+++ b/packages/data-visualization/package.json
@@ -9,7 +9,10 @@
     "@remix-run/node": "^2.3.0",
     "@remix-run/react": "^2.3.0",
     "@remix-run/serve": "^2.3.0",
+    "@vercel/remix": "^2.2.0",
     "axios": "^1.6.0",
+    "echarts": "^5.4.3",
+    "echarts-for-react": "^3.0.2",
     "framer-motion": "^10.16.4",
     "isbot": "^3.6.8",
     "jotai": "^2.5.0",
