--- a/package.json
+++ b/package.json
@@ -80,8 +80,11 @@
     "@tiptap/extension-link": "^2.1.12",
     "@tiptap/react": "^2.1.12",
     "@tiptap/starter-kit": "^2.1.12",
+    "@vercel/remix": "^2.2.0",
     "axios": "^1.6.0",
     "dayjs": "^1.11.10",
+    "echarts": "^5.4.3",
+    "echarts-for-react": "^3.0.2",
     "embla-carousel-react": "8.0.0-rc14",
     "framer-motion": "^10.16.4",
     "isbot": "^3.6.8",
