--- a/packages/data-visualization/package.json
+++ b/packages/data-visualization/package.json
@@ -6,11 +6,13 @@
   "scripts": {},
   "dependencies": {
     "@mantine/core": "^7.1.7",
+    "@mantine/dates": "^7.1.7",
     "@remix-run/node": "^2.3.0",
     "@remix-run/react": "^2.3.0",
     "@remix-run/serve": "^2.3.0",
     "@vercel/remix": "^2.2.0",
     "axios": "^1.6.0",
+    "dayjs": "^1.11.10",
     "echarts": "^5.4.3",
     "echarts-for-react": "^3.0.2",
     "framer-motion": "^10.16.4",
