--- a/packages/data-visualization/tsconfig.json
+++ b/packages/data-visualization/tsconfig.json
@@ -12,6 +12,7 @@
     "strict": true,
     "allowJs": true,
     "forceConsistentCasingInFileNames": true,
+    "allowSyntheticDefaultImports": true,
     "noEmit": true
   }
 }
