--- a/packages/data-visualization/package.json
+++ b/packages/data-visualization/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@mantine/core": "^7.1.7",
     "@mantine/dates": "^7.1.7",
+    "@mantine/hooks": "^7.1.7",
     "@remix-run/node": "^2.3.0",
     "@remix-run/react": "^2.3.0",
     "@remix-run/serve": "^2.3.0",
