--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@vitest/ui": "~0.32.0",
     "cypress": "^13.0.0",
     "eslint": "~8.46.0",
+    "eslint-config-mantine": "^3.1.0",
     "eslint-config-prettier": "9.0.0",
     "eslint-plugin-cypress": "^2.13.4",
     "eslint-plugin-import": "2.27.5",
