Add MongoDB connection utilities and update dependencies
This commit includes changes related to the connection with a MongoDB database in the data visualization package. It adds a utility to handle the database connection and provided a sample environment variable file for configuration. A new MongoDB and dotenv dependencies were also added. Moreover, it updates related configuration files and dependencies accordingly.

--- a/packages/data-visualization/package.json
+++ b/packages/data-visualization/package.json
@@ -14,12 +14,14 @@
     "@vercel/remix": "^2.2.0",
     "axios": "^1.6.0",
     "dayjs": "^1.11.10",
+    "dotenv": "^16.3.1",
     "echarts": "^5.4.3",
     "echarts-for-react": "^3.0.2",
     "framer-motion": "^10.16.4",
     "isbot": "^3.6.8",
     "jotai": "^2.5.0",
     "jotai-devtools": "^0.7.0",
+    "mongoose": "^8.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "remix-auth": "^3.6.0",
