--- a/nx.json
+++ b/nx.json
@@ -7,15 +7,15 @@
       "inputs": ["production", "^production"],
       "cache": true
     },
-    "test": {
-      "inputs": ["default", "^production"],
-      "cache": true
-    },
     "e2e": {
       "inputs": ["default", "^production"],
       "cache": true
     },
     "lint": {
+      "cache": true
+    },
+    "@nx/vite:test": {
+      "inputs": ["default", "^production"],
       "cache": true
     }
   },
