--- a/package.json
+++ b/package.json
@@ -14,33 +14,33 @@
     "@babel/preset-react": "^7.14.5",
     "@eslint/eslintrc": "^2.1.1",
     "@eslint/js": "~8.46.0",
-    "@nx/cypress": "17.0.1",
-    "@nx/eslint": "17.0.1",
-    "@nx/eslint-plugin": "17.0.1",
-    "@nx/js": "17.0.1",
-    "@nx/react": "17.0.1",
-    "@nx/remix": "^17.0.0",
-    "@nx/vite": "17.0.1",
-    "@nx/workspace": "17.0.1",
-    "@remix-run/dev": "^2.3.0",
-    "@remix-run/eslint-config": "^2.3.0",
+    "@nx/cypress": "17.2.8",
+    "@nx/eslint": "17.2.8",
+    "@nx/eslint-plugin": "17.2.8",
+    "@nx/js": "17.2.8",
+    "@nx/react": "17.2.8",
+    "@nx/remix": "17.2.8",
+    "@nx/vite": "17.2.8",
+    "@nx/workspace": "17.2.8",
+    "@remix-run/dev": "2.3.0",
+    "@remix-run/eslint-config": "2.3.0",
     "@swc-node/register": "~1.6.7",
     "@swc/cli": "~0.1.62",
     "@swc/core": "~1.3.85",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^14.0.0",
-    "@testing-library/user-event": "^14.4.3",
+    "@testing-library/jest-dom": "6.1.4",
+    "@testing-library/react": "14.1.2",
+    "@testing-library/user-event": "^14.5.1",
     "@types/node": "18.14.2",
     "@types/react": "18.2.24",
     "@types/react-dom": "18.2.9",
-    "@typescript-eslint/eslint-plugin": "^5.60.1",
-    "@typescript-eslint/parser": "^5.60.1",
-    "@vitejs/plugin-react": "~4.0.0",
+    "@typescript-eslint/eslint-plugin": "6.9.1",
+    "@typescript-eslint/parser": "6.9.1",
+    "@vitejs/plugin-react": "4.2.0",
     "@vitest/coverage-c8": "~0.32.0",
-    "@vitest/coverage-v8": "^0.34.4",
-    "@vitest/ui": "~0.32.0",
+    "@vitest/coverage-v8": "0.34.6",
+    "@vitest/ui": "0.34.7",
     "cypress": "^13.0.0",
-    "eslint": "~8.46.0",
+    "eslint": "8.48.0",
     "eslint-config-mantine": "^3.1.0",
     "eslint-config-prettier": "9.0.0",
     "eslint-plugin-cypress": "^2.13.4",
@@ -53,14 +53,14 @@
     "husky": "^8.0.3",
     "jsdom": "~22.1.0",
     "lint-staged": "^14.0.1",
-    "nx": "17.0.1",
+    "nx": "17.2.8",
     "postcss": "^8.4.31",
     "postcss-preset-mantine": "^1.9.0",
     "postcss-simple-vars": "^7.0.1",
     "prettier": "^2.6.2",
     "typescript": "^5.2.2",
-    "vite": "~4.3.9",
-    "vitest": "~0.32.0"
+    "vite": "5.0.0",
+    "vitest": "0.34.6"
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
@@ -76,9 +76,9 @@
     "@mantine/nprogress": "^7.1.7",
     "@mantine/spotlight": "^7.1.7",
     "@mantine/tiptap": "^7.1.7",
-    "@remix-run/node": "^2.3.0",
-    "@remix-run/react": "^2.3.0",
-    "@remix-run/serve": "^2.3.0",
+    "@remix-run/node": "2.3.0",
+    "@remix-run/react": "2.3.0",
+    "@remix-run/serve": "2.3.0",
     "@swc/helpers": "~0.5.2",
     "@tabler/icons-react": "^2.40.0",
     "@tiptap/extension-link": "^2.1.12",
@@ -91,12 +91,13 @@
     "echarts-for-react": "^3.0.2",
     "embla-carousel-react": "8.0.0-rc14",
     "framer-motion": "^10.16.4",
-    "isbot": "^3.6.8",
+    "isbot": "3.6.8",
     "jotai": "^2.5.0",
     "jotai-devtools": "^0.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tslib": "^2.3.0",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "@remix-run/css-bundle": "^2.3.0"
   }
 }
