--- a/packages/sortable-list-component/project.json
+++ b/packages/sortable-list-component/project.json
@@ -62,12 +62,7 @@
     },
     "lint": {
       "executor": "@nx/eslint:lint",
-      "outputs": ["{options.outputFile}"],
-      "options": {
-        "lintFilePatterns": [
-          "packages/sortable-list-component/**/*.{ts,tsx,js,jsx}"
-        ]
-      }
+      "outputs": ["{options.outputFile}"]
     }
   },
   "tags": []
