--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "@nx/react": "17.2.8",
     "@nx/remix": "17.2.8",
     "@nx/vite": "17.2.8",
+    "@nx/web": "17.2.8",
     "@nx/workspace": "17.2.8",
     "@remix-run/dev": "2.3.0",
     "@remix-run/eslint-config": "2.3.0",
+    "@remix-run/testing": "2.3.0",
     "@swc-node/register": "~1.6.7",
     "@swc/cli": "~0.1.62",
     "@swc/core": "~1.3.85",
@@ -76,6 +78,7 @@
     "@mantine/nprogress": "^7.1.7",
     "@mantine/spotlight": "^7.1.7",
     "@mantine/tiptap": "^7.1.7",
+    "@remix-run/css-bundle": "^2.3.0",
     "@remix-run/node": "2.3.0",
     "@remix-run/react": "2.3.0",
     "@remix-run/serve": "2.3.0",
@@ -97,7 +100,6 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tslib": "^2.3.0",
-    "zod": "^3.22.4",
-    "@remix-run/css-bundle": "^2.3.0"
+    "zod": "^3.22.4"
   }
 }
