--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
     "@nx/vite": "17.2.8",
     "@nx/web": "17.2.8",
     "@nx/workspace": "17.2.8",
-    "@remix-run/dev": "2.3.0",
-    "@remix-run/eslint-config": "2.3.0",
-    "@remix-run/testing": "2.3.0",
+    "@remix-run/dev": "^2.5.1",
+    "@remix-run/eslint-config": "^2.5.1",
+    "@remix-run/testing": "^2.5.1",
     "@swc-node/register": "~1.6.7",
     "@swc/cli": "~0.1.62",
     "@swc/core": "~1.3.85",
@@ -78,10 +78,10 @@
     "@mantine/nprogress": "^7.1.7",
     "@mantine/spotlight": "^7.1.7",
     "@mantine/tiptap": "^7.1.7",
-    "@remix-run/css-bundle": "^2.3.0",
-    "@remix-run/node": "2.3.0",
-    "@remix-run/react": "2.3.0",
-    "@remix-run/serve": "2.3.0",
+    "@remix-run/css-bundle": "^2.5.1",
+    "@remix-run/node": "^2.5.1",
+    "@remix-run/react": "^2.5.1",
+    "@remix-run/serve": "^2.5.1",
     "@swc/helpers": "~0.5.2",
     "@tabler/icons-react": "^2.40.0",
     "@tiptap/extension-link": "^2.1.12",
